updated with new nav and cards

--- a/index.html
+++ b/index.html
@@ -24,7 +24,26 @@
     <div id="main-page" class="container">
       <div id="header">
         <h2>Aimee's Ecology</h2>
+        <p>
+          “The first law of ecology is that everything is related to everything else.” — Barry Commoner
+        </p>
       </div>
+      <div>
+          <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Ecosystem</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/playground.html">Web Dev projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cv.html">CV</a>
+      </li>
+    </ul>
+    </div>
           <hr>
         <h3 class="section-title">Dynamic Ecosystem</h3>
         <br>
