broken link fixed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <!--Card image-->
               <div class="view overlay">
                 <img class="card-img-top" src="img/aimeespermaculture.png" alt="Aimee's Permaculture"/>
-                <a href="https://aimeefenech.com/permaculture.html">
+                <a href="https://aimeefenech.com/permaculture/">
                   <div class="mask rgba-white-slight"></div>
                 </a>
               </div>
