fix broken link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!--Text-->
                 <p class="card-text">Permaculture Articles, Designs, Events and Resources</p>
                 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-                <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/permaculture.html">
+                <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/permaculture/">
                   Find out more</a></button>
               </div>
             </div>
