--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/playground.html">Web Dev projects</a>
+        <a class="nav-link" href="/webdevprojects.html">Web Dev projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/cv.html">CV</a>
