updated nav style

--- a/webdevprojects.html
+++ b/webdevprojects.html
@@ -24,19 +24,22 @@
   <div id="header">
     <h2>Aimee's Web Development & Design Portfolio</h2>
   </div>
-  <nav>
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">Aimee's Ecology</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i></a>
-      </li>
-    </ul>
-  </nav>
+  <div>
+      <ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/index.html">Ecosystem</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/webdevprojects.html">Web Dev projects</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/cv.html">CV</a>
+  </li>
+  </ul>
+  </div>
   <div id="main-page" class="container">
     <br />
     <!-- Card deck -->
