added meeting booking mechanism

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,10 @@
         <input type="submit" name="send" class="btn"></input>
       </form>
     </div>
+    <h2>You can also request a 30 min meeting.</h2>
+    <div class="form-group">
+      <iframe src="https://app.cal.com/aimeefenech" padding= "25%" height="500" width="50%"  frameborder="0"></iframe>
+    </div>
     <br />
     <footer class="page-footer font-small footer navbar-fixed-bottom">
       <div class="footer-copyright text-center py-3">Website by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
