added latest appointments

--- a/cv.html
+++ b/cv.html
@@ -39,6 +39,22 @@
       <h3 class="section-title">Professional Experience</h3>
       <br>
 
+      <h5 class="company">Minimum Viable Academy</h5>
+      <p class="job-title">Co-Founder | Group Process Facilitator</p>
+      <p class="dates">2022 to present</p>
+        <ul class="job-description">
+          <li>session design & delivery using various tools including <a href="https://www.liberatingstructures.com/" target="_blank"Liberating Strucutres</a></li>
+          </ul>
+
+      <h5 class="company">International Permaculture CoLab</h5>
+      <p class="job-title">Project Manager | Consultant</p>
+      <p class="dates">2020 to present</p>
+        <ul class="job-description">
+          <li>Funding Circle - start up and project management consultant</li>
+          <li>Digital Circle - project mangement consultant, web developer</li>
+          <li>Capacity Plus - core team member, project manager & start up consultant</li>
+          </ul>
+
       <h5 class="company">Eco Hacker Farm</h5>
       <p class="job-title">Co-Founder | Project Manager | Operations Coordinator</p>
       <p class="dates">2015 to present</p>
