--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
       <p class="job-title">Co-Founder | Group Process Facilitator</p>
       <p class="dates">2022 to present</p>
         <ul class="job-description">
-          <li>session design & delivery using various tools including <a href="https://www.liberatingstructures.com/" target="_blank"Liberating Strucutres</a></li>
+          <li>session design & delivery using various tools including <a href="https://www.liberatingstructures.com/" target="_blank"Liberating Structures</a></li>
           </ul>
 
       <h5 class="company">International Permaculture CoLab</h5>
@@ -206,6 +206,7 @@
             <li>Dokuwiki</li>
             <li>Sketchup</li>
             <li>Six Sigma</li>
+            <li>Liberating Structures</li>
           </ul>
 
           <h3 class="section-title">Language Skills</h3>
