update volunteering exp

--- a/cv.html
+++ b/cv.html
@@ -221,15 +221,18 @@
           <h3 class="section-title">Memberships</h3>
           <ul class="list-unstyled general-list">
             <li>Permaculture International Research Network</li>
-            <li>Permaculture Association</li>
+            <li>Permaculture Association Britian</li>
+            <li>International Association of Facilitators</li>
 
           <h3 class="section-title">Volunteer Experience</h3>
+          <h5 class="company">Artists Network Alpuarra</h5>
+          <p class="course-title">Board Member</p>
           <h5 class="company">Hackerspaces.org</h5>
           <p class="course-title">Blog Editor, Project Manager for the Great Census of 2019</p>
           <p class="dates">2018 to present</p>
           <h5 class="company">Living Ability Not Disability</h5>
           <p class="course-title">Social Media Promoter, Carer & Companion</p>
-          <p class="dates">2005 to present</p>
+          <p class="dates">2005 to 2016</p>
 
           <h3 class="section-title">Personal Interests</h3>
           <ul class="personal-interests list-unstyled">
