updated volunteering exp

--- a/cv.html
+++ b/cv.html
@@ -229,7 +229,7 @@
           <p class="course-title">Board Member</p>
           <h5 class="company">Hackerspaces.org</h5>
           <p class="course-title">Blog Editor, Project Manager for the Great Census of 2019</p>
-          <p class="dates">2018 to present</p>
+          <p class="dates">2018 to 2019</p>
           <h5 class="company">Living Ability Not Disability</h5>
           <p class="course-title">Social Media Promoter, Carer & Companion</p>
           <p class="dates">2005 to 2016</p>
