--- a/cv.html
+++ b/cv.html
@@ -63,7 +63,7 @@
           <li>development of processess and procedures for onboarding</li>
           <li>project management for powerplant (opensource webapp) and site locations</li>
           <li>event Coordinator</li>
-          <li>public relations & social media managment</li>
+          <li>public relations & social media management</li>
           </ul>
 
           <h5 class="company">Freelance</h5>
