--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,9 @@
         <input type="submit" name="send" class="btn"></input>
       </form>
     </div>
-    <h2>You can also request a 30 min meeting.</h2>
+    <br />
     <div class="form-group">
-      <iframe src="https://app.cal.com/aimeefenech" padding= "25%" height="500" width="50%"  frameborder="0"></iframe>
+      <iframe src="https://app.cal.com/aimeefenech" padding= "25%" height="500" width="50%"  margin= "0 auto" frameborder="0"></iframe>
     </div>
     <br />
     <footer class="page-footer font-small footer navbar-fixed-bottom">
