Added book a meeting

--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,9 @@
     </ul>
   </nav>
     <br />
+    <br />
     <div class="container" id="form-box">
-
+      <br />
       <form method="POST" action="contact.php">
         <div class="form-group">
           <label for="email">Email address</label>
@@ -55,8 +56,12 @@
       </form>
     </div>
     <br />
-    <div class="form-group">
-      <iframe src="https://app.cal.com/aimeefenech" padding= "25%" height="500" width="50%"  margin= "0 auto" frameborder="0"></iframe>
+    <br />
+    <div width="60%" class="book-appointment">
+      <h4>Book a meeting</h4>
+      <p align="center">
+        <iframe src="https://app.cal.com/aimeefenech"  padding= "25%" height="500" width="60%"  margin= "0 auto" frameborder="0"></iframe>
+      </p>
     </div>
     <br />
     <footer class="page-footer font-small footer navbar-fixed-bottom">
