updated main page to remove obsolete kumu map and add new items on the navigation menu

--- a/index.html
+++ b/index.html
@@ -28,29 +28,15 @@
           “The first law of ecology is that everything is related to everything else.” — Barry Commoner
         </p>
       </div>
-      <div>
-          <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Ecosystem</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/webdevprojects.html">Web Dev projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/cv.html">CV</a>
-      </li>
-    </ul>
-    </div>
-          <hr>
-        <h3 class="section-title">Dynamic Ecosystem</h3>
-        <br>
-        <div id="dynamic-ecosystem">
-        <iframe src="https://embed.kumu.io/21fc546610843169548d8193a4042f3d" width="940" height="600" frameborder="0"></iframe>
-        <br>
       </div>
+      <div class="circle-layout" style="position: relative; width: 850px; height: 500px; margin: 30px auto 0;">
+        <img src="img/aimee.jpeg" alt="Aimee Fenech" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 450px; height: 450px; border-radius: 50%; object-fit: cover;">
+        <a href="/board-membership.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 0px); left: calc(50% + 250px); transform: translate(-50%, -50%);">Board Membership</a>
+        <a href="/project-management.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 216.5px); left: calc(50% + 150px); transform: translate(-50%, -50%);">Project Management</a>
+        <a href="/enterprise-development.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 216.5px); left: calc(50% - 150px); transform: translate(-50%, -50%);">Enterprise Development</a>
+        <a href="https://aimeefenech.com/permaculture/" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 0px); left: calc(50% - 250px); transform: translate(-50%, -50%);">Permaculture</a>
+        <a href="/webdevprojects.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% - 216.5px); left: calc(50% - 125px); transform: translate(-50%, -50%);">Web Development</a>
+        <a href="/cv.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% - 216.5px); left: calc(50% + 125px); transform: translate(-50%, -50%);">CV</a>
       </div>
     </div>
 <footer class="page-footer font-small">
