edited links and look and feel of the page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Aimee's Ecology</title>
+  <title>Aimee Fenech</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <!-- Bootstrap core CSS -->
@@ -31,12 +31,13 @@
       </div>
       <div class="circle-layout" style="position: relative; width: 850px; height: 500px; margin: 30px auto 0;">
         <img src="img/aimee.jpeg" alt="Aimee Fenech" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 450px; height: 450px; border-radius: 50%; object-fit: cover;">
-        <a href="/board-membership.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 0px); left: calc(50% + 250px); transform: translate(-50%, -50%);">Board Membership</a>
-        <a href="/project-management.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 216.5px); left: calc(50% + 150px); transform: translate(-50%, -50%);">Project Management</a>
-        <a href="/enterprise-development.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 216.5px); left: calc(50% - 150px); transform: translate(-50%, -50%);">Enterprise Development</a>
-        <a href="https://aimeefenech.com/permaculture/" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 0px); left: calc(50% - 250px); transform: translate(-50%, -50%);">Permaculture</a>
+        <a href="/board-membership.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 89px); left: calc(50% + 221px); transform: translate(-50%, -50%);">Board Membership</a>
+        <a href="/project-management.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 216.5px); left: calc(50% + 0px); transform: translate(-50%, -50%);">Project Management</a>
+        <a href="/enterprise-development.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% + 116.5px); left: calc(50% - 250px); transform: translate(-50%, -50%);">Enterprise Development</a>
+        <a href="https://aimeefenech.com/permaculture/" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% - 50px); left: calc(50% - 250px); transform: translate(-50%, -50%);">Permaculture</a>
         <a href="/webdevprojects.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% - 216.5px); left: calc(50% - 125px); transform: translate(-50%, -50%);">Web Development</a>
-        <a href="/cv.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% - 216.5px); left: calc(50% + 125px); transform: translate(-50%, -50%);">CV</a>
+        <a href="/cv.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% - 191.5px); left: calc(50% + 125px); transform: translate(-50%, -50%);">CV</a>
+        <a href="/publications.html" class="btn btn-primary rounded-pill" style="position: absolute; top: calc(50% - 50px); left: calc(50% + 216.5px); transform: translate(-50%, -50%);">Publications</a>
       </div>
     </div>
 <footer class="page-footer font-small">
