updated nav links

--- a/webdevprojects.html
+++ b/webdevprojects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Aimee's Wed Development & Design Portfolio</title>
+  <title>Aimee Fenech</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <!-- Bootstrap core CSS -->
@@ -27,13 +27,25 @@
   <div>
       <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/index.html">Ecosystem</a>
+    <a class="nav-link" href="/index.html">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/board-membership.html">Board Membership</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/project-management.html">Project Management</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/enterprise-development.html">Enterprise Development</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/webdevprojects.html">Web Dev projects</a>
+    <a class="nav-link" href="/publications.html">Publications</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/webdevprojects.html">Web Development</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/cv.html">CV</a>
