udpated page with relevant content

--- a/board-membership.html
+++ b/board-membership.html
@@ -53,7 +53,28 @@
     <hr>
     <div class="container">
         <h3>Board Membership</h3>
-        <p>Details about board membership and governance work go here.</p>
+        <br>
+        <div class="card mb-4">
+            <div class="card-body">
+                <h4 class="card-title">Stitching Reculture Foundation</h4>
+                <p>Stichting Reculture Foundation is a Dutch public benefit organisation offering fiscal hosting in Europe, supporting projects that are fundraising in euros and engaging with EU funding contexts.</p>
+                <h5>On the board, I focus on the work that keeps a fiscal host trustworthy and functional:</h5>
+                <ul>
+                    <li>Supporting financial administration and day to day governance</li>
+                    <li>Interviewing prospective hostees and leading onboarding</li>
+                    <li>Strategic planning, improving the systems that help projects fundraise responsibly and operate transparently</li>
+                </ul>
+                <p>I care about fiscal hosting being more than paperwork. Done well, it protects projects, reduces risk, and makes it easier for good work to be funded without compromising values.</p>
+            </div>
+        </div>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAF_VImEWxk/fInxG0bfNV4rLhX50-gVNw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF_VImEWxk&#x2F;fInxG0bfNV4rLhX50-gVNw&#x2F;view?utm_content=DAF_VImEWxk&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Stichting Reculture Foundation</a>
     </div>
     <br />
 <footer class="page-footer font-small">
