edit to page text

--- a/board-membership.html
+++ b/board-membership.html
@@ -56,15 +56,18 @@
         <br>
         <div class="card mb-4">
             <div class="card-body">
-                <h4 class="card-title">Stitching Reculture Foundation</h4>
-                <p>Stichting Reculture Foundation is a Dutch public benefit organisation offering fiscal hosting in Europe, supporting projects that are fundraising in euros and engaging with EU funding contexts.</p>
-                <h5>On the board, I focus on the work that keeps a fiscal host trustworthy and functional:</h5>
+                <h4 class="card-title">Stichting Reculture Foundation</h4>
+                <p>I sit on the board of Stichting Reculture Foundation, a Dutch non profit and public benefit organisation that provides fiscal hosting in Europe. The foundation supports projects that fundraise in euros and those seeking EU grants, offering the administrative and governance structure that enables projects to receive and manage funds responsibly.</p>
+                <h5>My current responsibilities include:</h5>
                 <ul>
-                    <li>Supporting financial administration and day to day governance</li>
-                    <li>Interviewing prospective hostees and leading onboarding</li>
-                    <li>Strategic planning, improving the systems that help projects fundraise responsibly and operate transparently</li>
+                    <li><strong>Financial administration support:</strong> strengthening how money is tracked, processed, and reported so hostees and funders can rely on clear records</li>
+                    <li><strong>Hostee interviews and onboarding:</strong> assessing fit, clarifying expectations early, and helping new hostees start well</li>
+                    <li><strong>Strategic planning:</strong> improving our policies and internal systems so the foundation can host projects with integrity as we grow</li>
                 </ul>
-                <p>I care about fiscal hosting being more than paperwork. Done well, it protects projects, reduces risk, and makes it easier for good work to be funded without compromising values.</p>
+                <p>This role suits me because I enjoy the intersection of values, governance, and real world operations.</p>
+                <div class="alert alert-primary" role="alert">
+                    If you are looking for a fiscal host in Europe, you can contact us at <a href="mailto:contact@reculture.foundation">contact@reculture.foundation</a>.
+                </div>
             </div>
         </div>
         <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
