fix issue with link color contrast

--- a/board-membership.html
+++ b/board-membership.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
     <!-- Your custom styles (optional) -->
-    <link href="css/playground.css" rel="stylesheet">
+    <link href="css/playground.css?v=20260131" rel="stylesheet">
   </head>
 <body>
 
