--- a/enterprise-development.html
+++ b/enterprise-development.html
@@ -155,6 +155,20 @@
                 </a>
             </div>
 
+            <div class="flip-card" tabindex="0">
+                <button class="info-btn" aria-label="More info about Finca Verde Regen">i</button>
+                <a href="https://fincaverderegen.com" target="_blank" rel="noopener" aria-label="Open Finca Verde Regen website">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front" style="background-image:url('img/backgroundimage.jpg')">
+                            <div class="flip-card-title">Finca Verde Regen</div>
+                        </div>
+                        <div class="flip-card-back">
+                            <p>Regenerative agriculture and community projects based in Finca Verde.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
         </div>
 
         <p class="mt-3 small text-muted">Tip: on touch devices, tap the small <strong>i</strong> button to view the description without leaving the page.</p>
@@ -163,16 +177,60 @@
     <br />
 
     <script>
-    // Flip toggle for the info button (useful on touch devices)
+    // Flip and click behaviour for cards
     document.addEventListener('DOMContentLoaded', function(){
-      document.querySelectorAll('.flip-card .info-btn').forEach(function(btn){
-        btn.addEventListener('click', function(e){
-          e.stopPropagation();
-          e.preventDefault();
-          var card = this.closest('.flip-card');
-          card.classList.toggle('flipped');
+      document.querySelectorAll('.flip-card').forEach(function(card){
+        var btn = card.querySelector('.info-btn');
+        var link = card.querySelector('a');
+
+        // Info button toggles flip (works for mouse + keyboard + touch)
+        if (btn) {
+          btn.addEventListener('click', function(e){
+            e.stopPropagation();
+            e.preventDefault();
+            card.classList.toggle('flipped');
+          });
+          btn.addEventListener('keydown', function(e){ if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); this.click(); }});
+        }
+
+        // On touch devices: first tap flips, second tap follows the link (if set)
+        card.addEventListener('click', function(e){
+          if (e.target.closest('.info-btn')) return; // handled above
+
+          var isTouch = ('ontouchstart' in window) || window.matchMedia('(hover: none)').matches;
+
+          if (isTouch) {
+            if (!card.classList.contains('flipped')) {
+              e.preventDefault();
+              card.classList.add('flipped');
+              return;
+            }
+            // if already flipped, allow link to open normally
+            return;
+          }
+
+          // On non-touch (desktop) allow normal click to open link in new tab
+          // (no need to intercept) — hover handles flip on desktop
         });
-        btn.addEventListener('keydown', function(e){ if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); this.click(); }});
+
+        // Accessibility: allow Enter/Space on the card to follow the link when focused
+        card.addEventListener('keydown', function(e){
+          if ((e.key === 'Enter' || e.key === ' ') && document.activeElement === card) {
+            // If touch-mode and card isn't flipped, flip first
+            var isTouch = ('ontouchstart' in window) || window.matchMedia('(hover: none)').matches;
+            if (isTouch && !card.classList.contains('flipped')) {
+              e.preventDefault();
+              card.classList.add('flipped');
+            } else {
+              // follow link
+              var link = card.querySelector('a');
+              if (link && link.href && link.href.indexOf('#') !== 0) {
+                link.target = '_blank';
+                window.open(link.href, '_blank', 'noopener');
+              }
+            }
+          }
+        });
       });
     });
     </script>
